crates/rstest-bdd/tests/fixtures_macros/scenario_missing_path.stderr
error: unexpected end of input, `path` argument is required
 --> tests/fixtures_macros/scenario_missing_path.rs:3:1
  |
3 | #[scenario(index = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
