crates/rstest-bdd/tests/fixtures_macros/scenario_missing_path.rs
use rstest_bdd_macros::scenario;

#[scenario(index = 0)]
fn missing_path_argument() {}

fn main() {}
